test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/negate_void.plx
pub fn main(none) i32 {
    -cast<none>(10) #  you can't negate void expressions, only arithmetic expressions
    return 0
}
